@@ -1,5 +1,10 @@
 2008-10-09  Richard Hult  <richard@imendio.com>
 
+	* src/dh-util.[ch]: Add experimental state saving code to be used
+	soon.
+
+2008-10-09  Richard Hult  <richard@imendio.com>
+
 	* src/dh-util.c (dh_util_build_data_filename): Don't include the
 	"devhelp" directory component.
 
